# DataLab

./: .gitignore  DATALP.txt  MeanMedianExercise.ipynb  MeanMedianMode.ipynb  aws_data_notes.txt  explore.ipynb  h_test.ipynb  notes.txt  sid-notes.txt  spark-course-rdds.ipynb  spark-course.ipynb  spark_rdd_and_df.ipynb  sql1.sql  torchnn.ipynb
Airflow/: docker-compose.yml  notes.txt
aws-data-course/: notest.txt
clab/: _hello.c  a.out  setup.py  test.c
core-python/: OOP.ipynb  alogrithms.ipynb  data.db  databases.ipynb  decorators.ipynb  investment_cli.py  python-1.ipynb  python-deep-dive.ipynb  regex_playbook.ipynb  requests.ipynb  working_with_files.ipynb
data/: sample.txt
de-area/: note_de.ipynb
kafka/: theory.MD
ml-area/: 0.synopsis.txt  1-7.ipynb  8-15.ipynb  intro.ipynb  linear_regression_for_price_prediction.ipynb  ml_course_matplotlib.ipynb  ml_course_numpy.ipynb  ml_course_pandas.ipynb  ml_course_scipy.ipynb  ml_intro_and_feature_engineering.ipynb  plotting_from_pandas.ipynb  plotting_pandas.ipynb  random_forst_model_1.pkl  recommendation_system.py  scikit_learn.ipynb
ml-area/hugging_face/:  nlp.ipynb  pyproject.toml
postgres/: readme.txt
python-area/: OOP.ipynb  decorators.ipynb  mapper.sh  parallel.ipynb  requests.ipynb  sample1.txt  working_with_files.ipynb
python-area/env-tut/poetry_demo/: pyproject.toml
spark-tutorials/: adaptive-query-execution.ipynb  delta.ipynb  dynamic_allocation.ipynb  optimizations.ipynb  spark-course-dataframes.ipynb  spark-course-rdds.ipynb  spark-sql-dataframe.py  spark-sql-udfs-common-dfops.ipynb  (+1 more)
(+178 files in other folders)
