[project]
name = "hugging-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.2.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.27.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "motor>=3.6.0",
    "transformers>=4.47.1",
]
