[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["raddystr <raddy.radev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arrow = "^1.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
